Fix whitepaper display on small resolutions

--- a/src/css/whitepaper.css
+++ b/src/css/whitepaper.css
@@ -16,14 +16,14 @@
 }
 
 #whitepaper .image {
-  width: 100%;
-  padding-bottom: 56.25%;
+  width: 707px;
+  height: 500px;
   background-size: 100% 100%;
   position: relative;
   display: inline-block;
   background-color: #333;
   background-image: url('img/wp1.png');
-  margin: 3em 0 -5em;
+  margin: 3em 0 -15.7em;
   border-radius: 10px;
   box-shadow: 0 0 12px 0 rgba(0,0,0,0.3);
   max-width: 100%;
@@ -70,5 +70,11 @@
 @media screen and (max-width: 1000px) {
   #whitepaper {
     padding-top: 2em;
+  }
+  #whitepaper .image {
+    width: 100%;
+    padding-top: 70.7%;
+    margin: 3em 0 -3em;
+    height: auto;
   }
 }
